--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/assets/css/burger_style.css">
 	<link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
-		<title>KRUSTY BURGER</title>
+		<title>The Krusty Krab</title>
 </head>
 	<body>
 		{{{ body }}}
