--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,60 +1,58 @@
+{{!-- Setup the index.handlebars to have the template that Handlebars can render onto. --}}
 <div class="container">
-  <div class="jumbotron">
-    <h1>Krusty Burger Restaurant<img src="assets/img/krustyburger.png" alt="Burgers" /></h1>       
-  </div>
 
-  <div class="container intro">
-    <form class="create-update-form" action="/" method="POST">
-      <div class="form-group">
-        <label for="ca">Enter a Burger:</label>
-        <input type="text" id="burger" name="burgerName">
-      </div>
-      <button type="submit" class="btn btn-success btn-sm">Add Burger</button>
-    </form>
-  </div> 
-<br>
-  <div class="panel panel-default col-md-5" style="padding: 0px">
-    <div class="panel-heading">
-      <h3>Burgers to Eat!</h3>
-    </div>
-    <div class="panel-body">
-      <ul>
-        {{#each burger}}
-          {{#unless this.devoured}}
-            <li>
-              {{this.id}}<span>.</span> {{this.burger_name}}
+    <div class="jumbotron">
+        <h1 id="color-override">Eat the Burger</h1>
+        <p id="color-override">Make burgers, eat burgers.</p>
+        <br>
+        <h2 id="color-override">Make a Burger</h2>
+        <panel>
+            <form class="create-form">
+                <div class="form-group">
+                    <label for="newburger" id="color-override">New Burger:</label>
+                    <input type="text" id="newburger" name="burger">
+                    {{!-- Create a button in index.handlebars that will submit the user input into the database. --}}
+                    <button type="submit" class="btn btn-success" id="addburger"><span class="fa fa-thumbs-up"></span></button>
+                </div>
+            </form>
+        </panel>
+    </div><!-- /jumbotron -->
 
-              <form action="/{{this.id}}?_method=PUT" method="POST">
-                <input type="hidden" name="devour" value="true">
-                <button type="submit" class="btn btn-warning btn-sm">Devour!</button>
-              </form>
-            </li>
-          {{/unless}}
-        {{/each}}
-      </ul>
-    </div>
-  </div>
+    <div class="row">
+        <!-- Undevoured Burgers -->
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading" id="lefthead"><strong>New Burgers</strong></div>
+                <div class="panel-body">
+                    <ul>
+                        {{#each burgers}}
+                            {{#unless devoured}}
+                                <span><strong> {{this.id}} - {{this.burger_name}} </strong></span>
+                                <button type="button" class="eatburger btn btn-warning" id ="eatbutton" data-id="{{this.id}}" data-newDevoured="{{devour}}"><span class="fa fa-cutlery"></span></button>
+                                <hr>
+                            {{/unless}}
+                        {{/each}}
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- Devoured Burgers -->
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading" id="righthead"><strong>Devoured Burgers</strong></div>
+                <div class="panel-body">
+                    <ul>
+                        {{#each burgers}}
+                            {{#if devoured}}
+                                <span><strong> {{this.id}} - {{this.burger_name}} </strong></span>
+                                <button type="button" class="trashburger btn btn-danger" id ="trashbutton" data-id="{{this.id}}" data-newDevoured="{{devour}}"><span class="fa fa-trash"></span></button>
+                                <hr>
+                            {{/if}}
+                        {{/each}}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div><!-- /row -->
 
-  <div class="col-md-1">
-  </div>
-
-  <div class="panel panel-default col-md-5" style="padding: 0px">
-    <div class="panel-heading">
-      <h3>Devoured Burgers!</h3>
-    </div>
-    <div class="panel-body">
-      <ul>
-        {{#each burger}}
-          {{#if this.devoured}}
-            <li>
-              {{this.id}}<span>.</span> {{this.burger_name}}
-
-            </li>
-          {{/if}}
-        {{/each}}
-      </ul>
-
-    </div>
-  </div>
-      
-</div>
+</div><!-- /container -->
